--- a/BBS/src/main/webapp/WEB-INF/css/login2.css
+++ b/BBS/src/main/webapp/WEB-INF/css/login2.css
@@ -155,6 +155,7 @@ input::-ms-clear {
 	position:relative;
 	z-index:10;
 }
+
 .web_login .pwdArea {
 	height:55px;
 	margin-bottom:10px;
@@ -237,4 +238,12 @@ a.zcxy {text-decoration: underline;line-height:58px;margin-left:15px;color: #959
 .web_login .uinArea {
 height: 60px;}
 .header .switch{left:70px;}
+
+.web_login .userType {
+	height:30px;
+	font-size:16px;
+}
+.web_login .userType2{
+	margin-right:60px;
+}
 
